--- a/android-study-demo/.project
+++ b/android-study-demo/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cyinfo-onedata-android-iot</name>
-	<comment>Project cyinfo-onedata-android-iot created by Buildship.</comment>
+	<name>android-study-demo</name>
+	<comment>Project android-study-demo created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
